2001-06-08  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc : Volume curve now modifies Volume Controller events as
	  well as Note On Velocity values. Volume Curve now has a greater
	  impact and works "better". The difference is anything but subtle in
	  some songs.

2001-06-08  Dancer Vesperman <dancer@users.sourceforge.net>
	- Code Nazi
	* mapedit/shapedraw.cc: std::cout, std::endl

2001-06-07  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc : Fixed Pub Music (BG Track 20) "Bug"

2001-06-07  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/faqs.dtd, faq_html.xsl: added "Exult Studio" template
	* docs/faq/exult_faq.xml: FAQ updated see FAQ for details
	* Faq: updated

2001-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* 'Tournament' flag is back; I was wrong about it being
	'killable'.  Also Usecode(eventid==7) is only called when the
	'tournament' flag is set.  Seems to work so far.

2001-06-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* files/utils.cc: try converting all path-components to uppercase in turn when file not found. Report original filename on error.
	* gamewin.cc: updated 'SI paperdoll files not found' error message

2001-06-06  Jeff Freedman  <jeff@amy.nerble.net>

	* ExultStudio: You can insert a new egg by using the pulldown menu.

2001-06-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* SDL_mapping.*: modified to work with recent SDL CVS versions
	* actors.*: added a force_party_inv argument to Actor::activate
	* keyactions.cc: fixed '1'-'8' inventory shortcuts
	* defaultkeys.txt: small fix to make sure the correct map is displayed
	* SDL_mapping.*: undo change for recent SDL's, because it breaks older ones...
	
2001-06-04  Jeff Freedman  <jeff@amy.nerble.net>

	* You can drop a shape onto the shape area of the Egg-monster page
	in ExultStudio.

2001-06-03  Jeff Freedman  <jeff@amy.nerble.net>

	* EStudio: You can edit (existing) eggs now.

2001-06-02  Willem Jan Palenstijn <palenstijn@wanadoo.nl>